--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <script src="https://kit.fontawesome.com/5acb049422.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
